# trading-agent-compass

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  mypy.ini  phase-0-prompt.md  plan.md  pyproject.toml  requirements.txt  ruff.toml  streamlit_app.py
.github/workflows/: refresh-data.yml
.streamlit/: config.toml  secrets.toml.example
config/: strategy_params.yaml  universe.yaml
config/profiles/: aggressive.yaml  conservative.yaml  moderate.yaml
data/corporate_actions/: AAPL.parquet  AMZN.parquet  GOOGL.parquet  META.parquet  MSFT.parquet  NVDA.parquet  QLD.parquet  QQQ.parquet  SQQQ.parquet  TQQQ.parquet
data/macro/: VIX.parquet
data/news/: AAPL.parquet  GOOGL.parquet  QLD.parquet  SQQQ.parquet
data/prices/: AAPL.parquet  AMZN.parquet  GOOGL.parquet  META.parquet  MSFT.parquet  NVDA.parquet  QLD.parquet  QQQ.parquet  SQQQ.parquet  TQQQ.parquet
pages/: 2_🎯_Signals.py
scripts/: refresh_static_data.py
tests/: conftest.py  test_backtest.py  test_config.py  test_freshness.py  test_regime.py  test_secrets.py  test_sentiment.py  test_store.py  test_strategy.py  test_technical.py
tradeagent/: cli.py  config.py  logging_config.py  secrets.py
tradeagent/analysis/: regime.py  sentiment.py  technical.py
tradeagent/backtest/: engine.py  metrics.py
tradeagent/data/: fundamentals.py  macro.py  news.py  prices.py  store.py
tradeagent/strategy/: allocation.py  safety.py  signals.py  tax.py
tradeagent/ui/: freshness.py  sidebar.py
tradeagent/ui/pages/: 3_📈_Regime.py  4_🧪_Backtest.py  dashboard.py
