[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6",
    "structlog>=24",
    "pandas>=2.1",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "pyarrow>=15",
    "httpx>=0.27",
    "tenacity>=8",
    "typer>=0.12",
    "rich>=13",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "freezegun>=1.4",
    "ruff>=0.4",
    "black>=24",
    "mypy>=1.10",
    "types-pyyaml>=6",
]

[project.scripts]
tradectl = "tradeagent.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["tradeagent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tradeagent --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "notebooks/*"]
